first proof of concept

--- a/samples/BinanceConsoleApp/appsettings.json
+++ b/samples/BinanceConsoleApp/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "User": {
-    "ApiKey": "<api key>",
-    "ApiSecret": "<api secret>"
+    "ApiKey": "...",
+    "ApiSecret": "..."
   },
   "ApiOptions": {
     "EndpointUrl": "https://api.binance.com",
